@@ -1,7 +1,9 @@
 package com.guardias.backend.controller;
 
 import java.time.LocalDate;
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -59,6 +61,41 @@ public class DistribucionGiraController {
         return new ResponseEntity<List<DistribucionGira>>(list, HttpStatus.OK);
     }
 
+    @GetMapping("/listByActivoByPersonAndFechaInicio/{idPersona}/{fechaInicio}")
+    public ResponseEntity<List<DistribucionGira>> getByActivoFechaInicioAndPersona(
+            @PathVariable("idPersona") Long idPersona,
+            @PathVariable("fechaInicio") LocalDate fechaInicio) {
+        List<DistribucionGira> list = distribucionGiraService.findByActivoAndPersonaAndFechaInicio(true,
+                idPersona, fechaInicio);
+        return new ResponseEntity<List<DistribucionGira>>(list, HttpStatus.OK);
+    }
+
+    @GetMapping("/detailByActivoByPersonaAndFechaInicio/{idPersona}/{mes}/{anio}")
+    public ResponseEntity<List<DistribucionGira>> getByActivoPersonaAndFechaInicio(
+            @PathVariable("idPersona") Long idPersona,
+            @PathVariable("mes") int mes,
+            @PathVariable("anio") int anio) {
+
+        List<DistribucionGira> distribuciones = distribucionGiraService
+                .findByActivoPersonaAndFechaInicio(idPersona, mes, anio);
+
+        if (distribuciones.isEmpty()) {
+            return new ResponseEntity<>(HttpStatus.NO_CONTENT);
+        }
+
+        return new ResponseEntity<>(distribuciones, HttpStatus.OK);
+    }
+
+    @GetMapping("/existsByActivoByPersonaAndFechaInicio/{idPersona}/{mes}/{anio}")
+    public ResponseEntity<Boolean> existsByActivoPersonaAndFechaInicio(
+            @PathVariable("idPersona") Long idPersona,
+            @PathVariable("mes") int mes,
+            @PathVariable("anio") int anio) {
+
+        boolean exists = distribucionGiraService.existsByActivoPersonaAndFechaInicio(idPersona, mes, anio);
+        return ResponseEntity.ok(exists);
+    }
+
     @GetMapping("/detailefector/{idEfector}")
     public ResponseEntity<List<DistribucionGira>> getByEfector(@PathVariable("idEfector") Long idEfector) {
         if (!distribucionGiraService.existsByEfectorId(idEfector))
@@ -84,15 +121,17 @@ public class DistribucionGiraController {
     // Nueva implementación de getByPersona que filtra solo las distribuciones
     // activas
     @GetMapping("/detailpersona/{idPersona}")
-    public ResponseEntity<?> getByPersona(@PathVariable("idPersona") Long idPersona) {
+    public ResponseEntity<List<DistribucionGira>> getByPersona(@PathVariable("idPersona") Long idPersona) {
         if (!distribucionGiraService.existsByPersonaId(idPersona)) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(new Mensaje("no existe la carga horaria"));
+            return ResponseEntity.ok(Collections.emptyList());
         }
 
         // Obtener distribuciones y filtrar solo las activas
         List<DistribucionGira> distribucionGiraActivas = distribucionGiraService.findByPersonaId(idPersona)
-                .map(lista -> lista.stream().filter(DistribucionGira::isActivo).toList()) // Filtrar activas
-                .orElseGet(List::of); // Si no hay distribuciones, devolver lista vacía
+                .orElse(Collections.emptyList())
+                .stream()
+                .filter(DistribucionGira::isActivo)
+                .collect(Collectors.toList());
 
         return ResponseEntity.ok(distribucionGiraActivas);
     }
